# nc-time-axis

./: .cirrus.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md  issue.md
.github/workflows/: ci-citation.yml  ci-locks.yml  ci-manifest.yml  ci-template-check.yml  ci-test.yml  ci-tests.yml  ci-wheels.yml  tests.yml
docs/: Makefile  api.rst  common_links.inc  conf.py  examples.rst  index.rst  installation.rst  release-notes.rst  releases.rst  usage.rst
docs/src/: api.rst  common_links.inc  conf.py  index.rst  installation.rst
lib/nc-time-axis/: __init__.py
lib/nc_time_axis/: __init__.py
lib/nc_time_axis/tests/unit/: __init__.py  test_NetCDFTimeDateFormatter.py
nc_time_axis/: __init__.py  _version.py
nc_time_axis/tests/: __init__.py  test_pep8.py
nc_time_axis/tests/integration/: __init__.py  test_plot.py
nc_time_axis/tests/unit/: __init__.py  test_AutoCFTimeFormatter.py  test_CFTimeFormatter.py  test_CalendarDateTime.py  test_NetCDFTimeConverter.py  test_NetCDFTimeDateFormatter.py  test_NetCDFTimeDateLocator.py
requirements/: README.md  docs.yml  ncta.yml  py310.yml  py311.yml  py312.yml  py313.yml  py37.yml  py38.yml  py39.yml  pypi-core.txt  pypi-optional-docs.txt  pypi-optional-test.txt
requirements/locks/: README.md
src/nc_time_axis/: __init__.py
src/nc_time_axis/tests/integration/: test_plot.py
src/nc_time_axis/tests/unit/: test_AutoCFTimeFormatter.py  test_CFTimeFormatter.py  test_CalendarDateTime.py  test_NetCDFTimeConverter.py  test_NetCDFTimeDateLocator.py
