[metadata]
author = SciTools Developers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
description = Provides support for a cftime axis in matplotlib
download_url = https://github.com/SciTools/nc-time-axis
keywords =
    axis
    cftime
    matplotlib
license = BSD 3-Clause
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = nc-time-axis
project_urls =
    Code = https://github.com/SciTools/nc-time-axis
    Discussions = https://github.com/SciTools/nc-time-axis/discussions
    Issues = https://github.com/SciTools/nc-time-axis/issues
url = https://github.com/SciTools/nc-time-axis
version = attr: nc_time_axis.__version__

[options]
include_package_data = True
install_requires =
    cftime >=1.5
    matplotlib
    numpy
packages = find:
python_requires =
    >=3.7
zip_safe = False

[options.extras_require]
test =
    codecov
    pytest >=6.0
    pytest-cov
all =
    pre-commit
    %(test)s
